--- a/newsletter/template.html
+++ b/newsletter/template.html
@@ -304,34 +304,11 @@
             </div>
         </header>
         <main>
-            {{idea_futures_section}}
-            {{weekend_spikes_section}}
-            {{weekly_watchlist_section}}
-            {{clustering_section}}
-            {{opportunities_in_gaps_section}}
-            {{early_market_signals_section}}
-            {{trends_section}}
-            {{validation_section}}
-            {{deal_radar_section}}
-            {{experiment_section}}
-            {{founder_field_note_section}}
-            {{tomorrows_question_section}}
-            {{why_ideas_fail_section}}
-            {{execution_gaps_section}}
-            {{monthly_progress_section}}
-            {{anti_hype_section}}
-            {{category_teardown_section}}
-            {{weekly_top_10_section}}
-            {{cluster_of_week_section}}
-            {{founder_of_week_section}}
-            {{high_confidence_section}}
-            {{weekend_challenge_section}}
-            {{monday_preview_section}}
-            {{one_thing_section}}
+            {{main_sections}}
             {{closing_section}}
             {{sponsor_section}}
         </main>
-        <footer>
+        <footer style="display:none">
             <p>{{footer_note}}</p>
             <p>Powered by ValidatorAI · Data from internal submissions and public signals</p>
         </footer>
